force-app/main/default/objects/Lead/fields/Ages_of_Patients_Seen__c.field-meta.xml
<CustomField>
    <fullName>Ages_of_Patients_Seen__c</fullName>
    <formula>if (pcppatientage05__c , &apos;0-5 years; &apos;, &apos;&apos;) &amp;
if (pcppatientage612__c , &apos;6-12 years; &apos;, &apos;&apos;) &amp;
if (pcppatientage1318__c , &apos;13-18 years; &apos;, &apos;&apos;) &amp;
if (pcppatientage1922__c , &apos;19-22 years; &apos;, &apos;&apos;) &amp;
if (pcppatientage23more__c , &apos;23 years+; &apos;, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ages of Patients Seen</label>
    <type>Text</type>
</CustomField>