force-app/main/default/objects/Lead/fields/Bypass_Validations_Timeout__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Validations_Timeout__c</fullName>
    <description>Field to bypass all validation rules on Provider Registration and Lead records for system maintenance, data loading, or emergency fixes, and ensure validations are automatically re-enabled after the specified timeout period.</description>
    <label>Bypass Validations Timeout</label>
    <type>DateTime</type>
</CustomField>