force-app/main/default/objects/Lead/fields/Conference_presentation_or_exhibit__c.field-meta.xml
<CustomField>
    <fullName>Conference_presentation_or_exhibit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Presentation or Exhibit</label>
    <type>Checkbox</type>
</CustomField>