force-app/main/default/objects/Lead/fields/Health_Haven_Enrolled_Provider__c.field-meta.xml
<CustomField>
    <fullName>Health_Haven_Enrolled_Provider__c</fullName>
    <defaultValue>false</defaultValue>
    <label>APAL or HealthHaven Enrolled Provider</label>
    <type>Checkbox</type>
</CustomField>