force-app/main/default/objects/Lead/fields/Health_Haven_staff__c.field-meta.xml
<CustomField>
    <fullName>Health_Haven_staff__c</fullName>
    <defaultValue>false</defaultValue>
    <label>APAL or HealthHaven Staff</label>
    <type>Checkbox</type>
</CustomField>