force-app/main/default/objects/Lead/fields/heard_other__c.field-meta.xml
<CustomField>
    <fullName>heard_other__c</fullName>
    <label>How did you hear about VMAP? - Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>