force-app/main/default/objects/Lead/fields/How_do_You_Identify_with_Respect_to_Race__c.field-meta.xml
<CustomField>
    <fullName>How_do_You_Identify_with_Respect_to_Race__c</fullName>
    <label>How do you Identify with Respect to Race</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>American Indian or Alaska Native</fullName>
            </value>
            <value>
                <fullName>Asian</fullName>
            </value>
            <value>
                <fullName>Black or African American</fullName>
            </value>
            <value>
                <fullName>Hispanic/ Latinx/ Spanish</fullName>
            </value>
            <value>
                <fullName>Native Hawaiian or Pacific Islander</fullName>
            </value>
            <value>
                <fullName>Middle Eastern/ North African</fullName>
            </value>
            <value>
                <fullName>Multiple race/ Biracial</fullName>
            </value>
            <value>
                <fullName>White or Caucasian</fullName>
            </value>
            <value>
                <fullName>Prefer to self-describe (option not listed)</fullName>
            </value>
            <value>
                <fullName>Prefer not to answer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>