force-app/main/default/objects/Lead/fields/Location_of_Practice__c.field-meta.xml
<CustomField>
    <fullName>Location_of_Practice__c</fullName>
    <inlineHelpText>please include city and state (abbreviated)</inlineHelpText>
    <label>Location of Practice</label>
    <length>255</length>
    <type>Text</type>
</CustomField>