force-app/main/default/objects/Lead/fields/Name_of_Practice__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Practice__c</fullName>
    <label>Name of Practice</label>
    <length>255</length>
    <type>Text</type>
</CustomField>