force-app/main/default/objects/Lead/fields/Other_Specialty_Description__c.field-meta.xml
<CustomField>
    <fullName>Other_Specialty_Description__c</fullName>
    <label>Other Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>