force-app/main/default/objects/Lead/fields/pcpothersta_desc__c.field-meta.xml
<CustomField>
    <fullName>pcpothersta_desc__c</fullName>
    <label>Other Provider Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>