force-app/main/default/objects/Lead/fields/pcppatientage05__c.field-meta.xml
<CustomField>
    <fullName>pcppatientage05__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Patient Ages 0-5</label>
    <type>Checkbox</type>
</CustomField>