force-app/main/default/objects/Lead/fields/pcppatientage1922__c.field-meta.xml
<CustomField>
    <fullName>pcppatientage1922__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Patient Ages 19-22</label>
    <type>Checkbox</type>
</CustomField>