force-app/main/default/objects/Lead/fields/Practice_Locality__c.field-meta.xml
<CustomField>
    <fullName>Practice_Locality__c</fullName>
    <inlineHelpText>please include city and state (abbreviated)</inlineHelpText>
    <label>Practice Locality</label>
    <length>255</length>
    <type>Text</type>
</CustomField>