force-app/main/default/objects/Lead/fields/Provider_Languages_Description__c.field-meta.xml
<CustomField>
    <fullName>Provider_Languages_Description__c</fullName>
    <label>Other Languages</label>
    <length>255</length>
    <type>Text</type>
</CustomField>