force-app/main/default/objects/Lead/fields/Provider_Registration_Status__c.field-meta.xml
<CustomField>
    <fullName>Provider_Registration_Status__c</fullName>
    <label>Provider Registration Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Incomplete</fullName>
                <default>true</default>
                <label>Incomplete</label>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>No NPI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>