force-app/main/default/objects/Lead/fields/Specialty_Mental_Health_Training_Desc__c.field-meta.xml
<CustomField>
    <fullName>Specialty_Mental_Health_Training_Desc__c</fullName>
    <label>Describe Previous Mental Health Training</label>
    <length>255</length>
    <type>Text</type>
</CustomField>