force-app/main/default/objects/Lead/fields/Trainee_Type__c.field-meta.xml
<CustomField>
    <fullName>Trainee_Type__c</fullName>
    <label>Trainee Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Student in a medical school</fullName>
            </value>
            <value>
                <fullName>Resident (or equivalent within other medical fields)</fullName>
            </value>
            <value>
                <fullName>Fellow (or equivalent within other medical fields)</fullName>
            </value>
            <value>
                <fullName>Other medical trainee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>