force-app/main/default/objects/Lead/fields/trainenddate__c.field-meta.xml
<CustomField>
    <fullName>trainenddate__c</fullName>
    <label>Date When Training Will End</label>
    <type>Date</type>
</CustomField>