force-app/main/default/objects/Lead/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Provider Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Physician (MD, DO)</fullName>
            </value>
            <value>
                <fullName>Nurse practitioner (NP)</fullName>
            </value>
            <value>
                <fullName>Physician&apos;s Assistant (PA)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Channel Partner / Reseller Channel Partner</fullName>
                <isActive>false</isActive>
                <label>Channel Partner / Reseller Channel Partner</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>