force-app/main/default/objects/Lead/validationRules/Other_Medical_Trainee_Description_requir.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_Medical_Trainee_Description_requir</fullName>
    <active>true</active>
    <description>When the Provider Trainee Type is ‘Other medical trainee’, the user must provide the Other Medical Trainee Description (Other_Medical_Trainee_c).
Bypass_Validations_Timeout__c can Bypass field</description>
    <errorConditionFormula>AND(
OR(Bypass_Validations_Timeout__c &lt;= NOW(), ISBLANK(Bypass_Validations_Timeout__c)),
ISPICKVAL(Trainee_Type__c , &apos;Other medical trainee&apos;),
ISBLANK(Other_Medical_Trainee_Description__c )
)</errorConditionFormula>
    <errorDisplayField>Other_Medical_Trainee_Description__c</errorDisplayField>
    <errorMessage>Please input the Other Medical Trainee Description when ‘Trainee Type’ is ‘Other medical trainee’.</errorMessage>
</ValidationRule>