force-app/main/default/objects/Lead/validationRules/Provider_How_did_you_hear_about_APAL.validationRule-meta.xml
<ValidationRule>
    <fullName>Provider_How_did_you_hear_about_APAL</fullName>
    <active>true</active>
    <description>If OtherSource_c is true, the user must fill in heard_other_c to explain how they heard about APAL.
This validation fires only if the current time is greater than or equal to Bypass_Validations_Timeout__c.</description>
    <errorConditionFormula>AND(
				NOT(Incomplete_Submission__c),
OR(Bypass_Validations_Timeout__c &lt;= NOW(),
isBlank(Bypass_Validations_Timeout__c)
),
Other__c = true,
ISBLANK(heard_other__c)
)</errorConditionFormula>
    <errorMessage>If you heard about APAL from a different source, please specify where you heard about APAL in the ‘How did you hear about APAL? – Other’ text box.</errorMessage>
</ValidationRule>