force-app/main/default/objects/Lead/validationRules/Provider_Lang_Description.validationRule-meta.xml
<ValidationRule>
    <fullName>Provider_Lang_Description</fullName>
    <active>true</active>
    <description>If pcplang_c is set to “Other,” then pcplangdesc_c must be filled in to describe the language.
This validation fires only if the current time is greater than or equal to Bypass_Validations_Timeout__c.</description>
    <errorConditionFormula>AND(
Bypass_Validations_Timeout__c &lt;= NOW(),
ISPICKVAL( Provider_Language_other_than_English__c, &apos;Other&apos;),
ISBLANK( Provider_Languages_Description__c )
)</errorConditionFormula>
    <errorMessage>Please input the provider’s other language.</errorMessage>
</ValidationRule>