force-app/main/default/objects/Lead/validationRules/Provider_Number_of_years_of_practice.validationRule-meta.xml
<ValidationRule>
    <fullName>Provider_Number_of_years_of_practice</fullName>
    <active>true</active>
    <description>When the Provider Trainee Type is ‘Other medical trainee’, the user must specify the Number of Years In Practice (Number_of_Years).
Can be bypassed if Bypass_Validations_Timeout__c  &gt; now and the Bypass field is not blank.</description>
    <errorConditionFormula>AND(
				ISPICKVAL(Provider_Registration_Status__c, &apos;Complete&apos;),
OR(Bypass_Validations_Timeout__c &lt;= NOW(), ISBLANK(Bypass_Validations_Timeout__c)),
ISPICKVAL(Trainee_Type__c, &apos;Other medical trainee&apos;),
ISBLANK(Number_of_Years_In_Practice__c)
)</errorConditionFormula>
    <errorDisplayField>Number_of_Years_In_Practice__c</errorDisplayField>
    <errorMessage>Please specify the Number of Years In Practice when ‘Trainee Type’ is ‘Other medical trainee’.</errorMessage>
</ValidationRule>