force-app/main/default/objects/Lead/validationRules/Provider_Race_Description.validationRule-meta.xml
<ValidationRule>
    <fullName>Provider_Race_Description</fullName>
    <active>true</active>
    <description>If the Provider’s Race is “Prefer to self-describe (option not listed),” pcpracedesc__c must be filled out with the specific race.
This validation fires only if the current time is greater than or equal to Bypass_Validations_Timeout__c.</description>
    <errorConditionFormula>AND(
Bypass_Validations_Timeout__c &lt;= NOW(),
ISPICKVAL( How_do_You_Identify_with_Respect_to_Race__c , &apos;Prefer to self-describe (option not listed)&apos;),
ISBLANK(pcpracedesc__c)
)</errorConditionFormula>
    <errorMessage>If ‘Prefer to self-describe (option not listed)’ is selected for Race, please provide the race description.</errorMessage>
</ValidationRule>