force-app/main/default/objects/Lead/validationRules/Specify_the_Provider_First_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Specify_the_Provider_First_Name</fullName>
    <active>true</active>
    <description>When the record is a Provider (or a lead representing a Provider), a First Name is required.
This validation fires only if the current time is greater than or equal to Bypass_Validations_Timeout__c.</description>
    <errorConditionFormula>AND(
Bypass_Validations_Timeout__c &lt;= NOW(),
ISBLANK(FirstName)
)</errorConditionFormula>
    <errorMessage>Please enter your First Name.</errorMessage>
</ValidationRule>