force-app/main/default/objects/Lead/validationRules/Specify_the_Trainee_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Specify_the_Trainee_Type</fullName>
    <active>true</active>
    <description>If the provider is a trainee, the trainee type (pcptraintype__c) must be specified.
This validation fires only if the current time is greater than or equal to Bypass_Validations_Timeout__c.</description>
    <errorConditionFormula>AND(
OR(Bypass_Validations_Timeout__c &lt;= NOW(),
isBlank(Bypass_Validations_Timeout__c)
),
ISPICKVAL( The_provider_is_a_Trainee__c , &apos;Yes&apos;),
ISPICKVAL( Trainee_Type__c , &apos;&apos;)
)</errorConditionFormula>
    <errorMessage>Please specify the Trainee Type if the provider is marked as a Trainee.</errorMessage>
</ValidationRule>